tests/paczka2/big_fuzzy/64880703.err
Error in line 7: Ea0Z S35 87,1
Error in line 8: Ea0Z S45 69,4
Error in line 24: TKCBj3ir S35 79,0
Error in line 28: TKCBj3ir S45 25,0
Error in line 29: TKCBj3ir A219 19,5
Error in line 42: wXOsrY S45 195,0
Error in line 33: TKCBj3ir S735 75,9
Error in line 61: cPBR1 S45 9,2
Error in line 54: S35 S45 30,2
Error in line 63: S35 S735 94,9
Error in line 59: TKCBj3ir S735 66,0
Error in line 66: TKCBj3ir A219 3,1
Error in line 71: cPBR1 S45 62,0
Error in line 82: 1da7i2 S45 3,3
Error in line 85: wXOsrY S35 25,0
Error in line 64: S35 S45 0,5
Error in line 89: S35 S35 90,5
Error in line 95: S35 A219 74,8
Error in line 90: cPBR1 S35 58,0
Error in line 102: TKCBj3ir S35 14,0
Error in line 104: HeL S4s 102,6
Error in line 103: TKCBj3ir S45 59,6
Error in line 119: wXOsrY S45 -2,5
Error in line 114: wXOsrY S45 24,6
Error in line 120: wXOsrY S35 66,7
Error in line 123: wXOsrY S45 35,3
Error in line 115: cPBR1 S45 64,4
Error in line 130: S35 A219 39,0
Error in line 129: cPBR1 S35 123,2
Error in line 144: 1da7i2 S735 32,9
Error in line 155: 1da7i2 S35 26,3
Error in line 147: cPBR1 A219 29,7
Error in line 145: S35 S35 10,8
Error in line 156: 1da7i2 S735 15,1
Error in line 158: Ea0Z S35 68,9
Error in line 164: 1da7i2 S35 -1,9
Error in line 157: cPBR1 S35 21,1
Error in line 168: HeL S35 42,5
Error in line 167: cPBR1 S735 9,0
Error in line 175: HeL S45 50,2
Error in line 180: S35 A219 55,3
Error in line 216: S35 A219 32,2
Error in line 214: TKCBj3ir S35 29,5
Error in line 218: S35 S35 70,0
Error in line 220: S35 S735 39,8
Error in line 233: Ea0Z A219 57,6
Error in line 240: cPBR1 S45 20,5
